# interrogate

./: CONTRIBUTING.md  README.md  main.py  mise.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
src/interrogate/: __init__.py  __main__.py  fetchers.py  robots.py  tech_detector.py  utils.py  validators.py
tests/: test_fetchers.py  test_main.py  test_robots.py  test_tech_detector.py  test_utils.py  test_validators.py
