[project]
name = "interrogate"
version = "0.1.0"
description = "Interrogate a URL for information"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["requests>=2.32.5"]

[project.scripts]
interrogate = "interrogate.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.14.8",
    "ty>=0.0.1a32",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
